Fixed main.css to not scroll the background along with content, that way it doesn't cut off and repeat and look butt ugly.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -54,6 +54,7 @@ html {
     background: -moz-linear-gradient(#eefaff, #446611);
     background: -webkit-linear-gradient(#eefaff, #446611);
     background: -o-linear-gradient(#eefaff, #446611);
+    background-attachment: fixed;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
